 - All plugins with functions named smarty_function_foo are cachable.
 - UDT's are never cachable
 - Fix permissions issues with GCB's
 - Add checks in system information for xml capabilities.
 - Fixes #7212 - Error in CreateReturnLink api method.
 - Fixes #7334 - Changing a content page with a url specified to a section header.
 
Core - Bug Reports:
 - #6161 Core Printing Module - Compression issue
 - #7740 HTML entities in the language string aren't getting converted back when sending the email during install

Core - Feature Requests:


Core - General:


Core - Installer:
  - mysqli option now selected by default.
  - Add checks for xml handling.

CMSMailer:


MenuManager:
- Added the {cms_breadcrumbs} action (which is templatable).  deprecates {breadcrumbs}
- Fixes #7306 - haschildren always fals
- Adds the action=items capability.
	

MicroTiny:
 - Two new preferences to assist in managing stylesheet and other background settings.
 - #7223 (fixes for secure admin).

News:
 - All routes are now registered statically
 - The {news} plugin is now part of the News module
 - The detail page now handles caching well.
 - The detail page now throws a 404 exception for attempts to view expired/draft articles.
 - Full lazyload is now supported.
 - Now supports smarty caching
 - optimization of code to minimize queries (preload field data for summary views).
 - begin more oopification.
 - Generates 404 errors if routed to an invalid article, or an article that is expired/draft.
 - Fixes #7713 - Apply button doesn't work.
 - Fixes #7457 - Duplicate news url
 - Access to the Categories and custom fields tab is now controlled by the 'Modify Site Preferences' permission.

Search: 
 - Moved "Stop Words" to language file
 - Added "Load Stop Words" from user language



Version 1.10.2 - Casa Pilote
-----------------------------
Core - Bug Reports:
  - #7111 ordered lists in backend
  - #7112 Missing content-type in printing module (CMSPrinting)