@@ -41,6 +41,7 @@ Version 1.11 - NO NAME
  - Add checks in system information for xml capabilities.
  - Fixes #7212 - Error in CreateReturnLink api method.
  - Fixes #7334 - Changing a content page with a url specified to a section header.
+ - Fixes #7030 - Installing modules in listmodules skips dependency check.
  
 Core - Bug Reports:
  - #6161 Core Printing Module - Compression issue
